--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,6 @@ MAILER_SENDER_ADDRESS=noreply@example.com
 
 # comma separated list of IP adresses
 # MINI_PROFILER_IP_WHITELIST=rack_mini_profiler_ip
+
+# We send all feedback email to this address
+FEEDBACK_EMAIL=test@example.com
